--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+a,
+a:visited {
+  text-decoration: none;
+  cursor: pointer;
+  color: #f00658;
+}
+a:hover,
+a:active {
+  font-weight: 600;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "FiraCode";
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+::selection {
   color: white;
+  background: #f00658;
 }
 
-.App-link {
-  color: #61dafb;
+::-moz-selection {
+  color: white;
+  background: #f00658;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: "Overpass";
+  src: local("Overpass"),
+    url(./assets/fonts/Overpass/Overpass-semibold.woff) format("woff"),
+    url(./assets/fonts/Overpass/Overpass-semibold.woff2) format("woff2");
+}
+
+@font-face {
+  font-family: "FiraCode";
+  src: local("FiraCode"),
+    url(./assets/fonts/FiraCode/FiraCode-Light.woff) format("woff"),
+    url(./assets/fonts/FiraCode/FiraCode-Light.woff2) format("woff2");
+}
+
+h1 {
+  font-family: "Overpass";
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 86px;
+  margin: 0;
+}
+
+h2 {
+  font-family: "Overpass";
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 40px;
+}
+
+h3 {
+  font-family: "Overpass";
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 40px;
+  margin: 0;
+}
+
+h4 {
+  font-family: "Overpass";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 40px;
+}
+p {
+  margin-block-start: 2em;
+  margin-block-end: 2em;
+}
+
+strong {
+  /* color: #f00658; */
 }
