--- a/src/ui/Projects.module.scss
+++ b/src/ui/Projects.module.scss
@@ -1,7 +1,15 @@
+@import "../Global.scss";
+
 .projects {
   margin-top: 130px;
   display: flex;
   flex-wrap: wrap;
   margin-left: -10px;
   margin-right: -10px;
+  @media (max-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
