--- a/src/ui/Contact.module.scss
+++ b/src/ui/Contact.module.scss
@@ -1,20 +1,37 @@
+@import "../Global.scss";
+
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .links {
-  margin-top: 100px;
+  margin-top: 30px;
+  flex-wrap: wrap;
   a {
     padding: 20px;
   }
   a:last-child {
     padding-right: 0;
   }
+  a:first-child {
+    padding-left: 0;
+  }
+  @media (max-width: $tablet) {
+    justify-content: center;
+
+    margin-top: 20px;
+    a {
+      padding: 10px;
+    }
+  }
 }
 
 .signature {
-  margin-top: 25px;
+  margin-top: 60px;
   display: flex;
-  justify-content: flex-end;
+  @media (max-width: $tablet) {
+    justify-content: center;
+  }
 }
