--- a/src/ui/Skill.module.scss
+++ b/src/ui/Skill.module.scss
@@ -1,8 +1,14 @@
+@import "../Global.scss";
+
 .skill {
   display: flex;
   flex-direction: column;
   width: calc(33.333% - 20px);
   margin: 0 20px;
+  @media (max-width: $tablet) {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .skill:first-child {
