--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,8 +1,11 @@
-@import "../Global.scss";
+@import "../assets/styles/Variables.scss";
 
 .preText {
   font-family: "FiraCode";
   font-size: 20px;
+  @media (max-width: $tablet) {
+    font-size: 18px;
+  }
 }
 
 .text {
