Fix logo. Add clickable area to whole card

--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -55,6 +55,15 @@ a.title {
 }
 a.title:visited {
   color: black;
+  font-weight: normal;
+}
+a.title:focus {
+  color: black;
+  font-weight: normal;
+}
+a.title:hover {
+  color: black;
+  font-weight: normal;
 }
 
 .burgerIcon {
