--- a/src/ui/Card.module.scss
+++ b/src/ui/Card.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   background: white;
   margin: 10px;
+  cursor: pointer;
   @media (max-width: $tablet) {
     margin-left: 0;
     margin-right: 0;
