--- a/src/layout/Block.module.scss
+++ b/src/layout/Block.module.scss
@@ -28,6 +28,18 @@
   background-color: $green;
 }
 
+.sandBackground {
+  background-color: $sand;
+}
+
+.orangeBackground {
+  background-color: $orange;
+}
+
+.purpleBackground {
+  background-color: $purple;
+}
+
 .verticalPadding {
   padding-top: 130px;
   padding-bottom: 130px;
