--- a/src/assets/styles/Variables.scss
+++ b/src/assets/styles/Variables.scss
@@ -7,4 +7,7 @@ $gray: #f5f5f5;
 $lightgray: #f8fcff;
 $blue: #ddeefe;
 $red: #f00658;
+$orange: #fcf5e9;
+$purple: #f1e8fb;
+$sand: #fdf6f0;
 $green: #d9f6f1;
