--- a/src/pages/Project.module.scss
+++ b/src/pages/Project.module.scss
@@ -72,10 +72,10 @@
   // justify-content: space-between;
   @media (min-width: $tablet) {
     &:first-child {
-      padding-right: 20px;
+      padding-right: 40px;
     }
     &:last-child {
-      padding-left: 20px;
+      padding-left: 40px;
     }
   }
 
@@ -172,4 +172,14 @@
       width: 100%;
     }
   }
+}
+
+.contact {
+  width: 50%;
+  float: right;
+  border-left: 3px solid $red;
+  padding: 10px 0 10px 18px;
+  margin-left: auto;
+  margin-top: 70px;
+  font-weight: bold;
 }
